2015-04-19  Werner Lemberg  <wl@gnu.org>

	[ftdiff] Correctly reload face after changing hinting engine.

	In most cases, calling `FT_Property_Set' acts globally on the
	FT_Library object.

	* src/ftdiff.c (RenderStateRec): Remove `need_rescale', since we
	always rescale now after reloading the face.
	Update all users.
	(render_state_set_face_index): New function.
	(render_state_set_file): Remove `idx' argument.  Instead, (re)load
	font with index `state->face_index'.
	(render_state_draw): Call `render_state_set_file'.
	(event_change_face_index): New function.
	(process_event): s/render_state_set_file/event_change_face_index/.
	(main): Updated.

2015-04-18  Werner Lemberg  <wl@gnu.org>

	[ftgrid] Show advance width.

	* src/ftgrid.c (grid_status_draw_outline): Display vertical line at
	advance width position.

2015-04-16  Werner Lemberg  <wl@gnu.org>

	[ftgrid] Key `W' now toggles warper (if compiled-in).

	* src/ftgrid.c [FT_DEBUG_AUTOFIT]: New extern variable
	`_af_debug_disable_warper'.
	(GridStatusRec): Add `do_warp' member.
	(grid_status_init): Updated.
	(grid_status_draw_outline): Set `_af_debug_disable_warper'.
	(event_help): Updated.
	(Process_Event): Handle `W' key.

2015-04-16  Werner Lemberg  <wl@gnu.org>

	[ftgrid] Make blue zone toggling actually work.

	* src/ftgrid.c (grid_status_draw_outline) [FT_DEBUG_AUTOFIT]: Set
	`_af_debug_disable_blue_hints'.

2015-04-16  Werner Lemberg  <wl@gnu.org>

	* src/ftgrid.c (Process_Event) <' '>: Don't reset debugging flags.

2015-04-16  Werner Lemberg  <wl@gnu.org>

	[ftgrid] Cycle through AA rendering modes with F5 and F6.

	* src/ftgrid.c (event_lcd_mode_change): New function.
	(Process_Event) [FT_DEBUG_AUTOFIT]: Enable debug stuff for light AA
	mode also.
	Handle `F5' and `F6' keys.
	(event_help): Updated.

2015-04-14  Werner Lemberg  <wl@gnu.org>

	[ftgrid] Fix memory leak.

	* src/ftgrid.c (event_font_change): Free `status.mm' before calling
	`FT_Get_MM_Var' (again).

2015-04-14  Werner Lemberg  <wl@gnu.org>
